# Agent

./: .gitignore  Dockerfile  README.md  docker-compose.yml  implementation-details.md  pyproject.toml
agent_system/: pytest.ini
agent_system/src/agent/: embedding.py  hybrid_retriever.py  llm.py  rag.py
agent_system/src/data/: loader.py  processor.py
agent_system/src/evaluation/: evaluator.py  timer.py
agent_system/tests/: conftest.py
agent_system/tests/test_data/: criminal_law_test.csv
agent_system/tests/test_modules/: test_embedding.py  test_evaluator.py  test_llm.py  test_loader.py  test_rag.py
outputs_0211/: batch_api_input.jsonl  batch_api_output.jsonl  evaluation_metrics.csv  evaluation_results.json
scripts/: run.sh
